UI animation fade ins (#452)
* New animation util and component container which fades in on reaching the viewport

* Application of animation fade ins across the major components

* Fix Button Group too big bug

* Fix APR alignment bug when there are massive percentages

* Tweaks to the fade in animation

* Animation application to pages

* Add animation to pool list table rows and cards

* Updated the animation to use css transforms for better performance

* Removed table row and header animation for Pool List and Portfolio tables

* chore: Hide staking options if no gauge

* chore: Hide sparkle if no rewards APR

* fix z-index issue (#458)

* chore: Remove comment from css

* fix: update pnpm-lock.yaml

---------

Co-authored-by: Gareth Fuller <gareth.a.f@gmail.com>
Co-authored-by: groninge <groninge@gmail.com>
Co-authored-by: Alberto Gualis <agualis@gmail.com>

--- a/lib/assets/css/global.css
+++ b/lib/assets/css/global.css
@@ -12,3 +12,34 @@ body {
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+.visible {
+  opacity: 1;
+  transform: translateY(0) scale(1);
+  transition: opacity 1s ease, transform 1s ease;
+  transform-origin: top;
+}
+
+.hidden {
+  opacity: var(--start-opacity);
+  transform: translateY(5px) scale(var(--start-scale));
+  transition: opacity 1s ease, transform 1s ease;
+  transform-origin: top center;
+  position: relative;
+}
+
+.opacity-base {
+  --start-opacity: 1;
+}
+
+.opacity-md {
+  --start-opacity: 0;
+}
+
+.scale-base {
+  --start-scale: 0.98;
+}
+
+.scale-md {
+  --start-scale: 0.98;
+}
