--- a/lib/assets/css/global.css
+++ b/lib/assets/css/global.css
@@ -47,3 +47,8 @@ body {
     --start-scale: 0.98;
   }
 }
+
+/* AppZi styles */
+div[id^='bkln'] {
+  background-color: rgb(0 0 0 / 90%) !important;
+}
