--- a/lib/assets/css/global.css
+++ b/lib/assets/css/global.css
@@ -60,6 +60,7 @@ div[id^='bkln'] {
     transform: scale(0);
     opacity: 0.6;
   }
+
   100% {
     transform: scale(4);
     opacity: 0;
@@ -77,17 +78,16 @@ div[id^='bkln'] {
 }
 
 .ripple-1 {
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgb(255 255 255 / 40%);
   animation-delay: 0s;
 }
 
 .ripple-2 {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgb(255 255 255 / 30%);
   animation-delay: 1s;
 }
 
 .ripple-3 {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgb(255 255 255 / 20%);
   animation-delay: 2s;
 }
-
