fix: Hide remaining outline on focus

--- a/lib/assets/css/global.css
+++ b/lib/assets/css/global.css
@@ -2,9 +2,14 @@
   --ease-out-cubic: cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 
-*:focus {
-  outline: none !important;
+:focus,
+:focus-visible,
+*[data-focus] {
   box-shadow: none !important;
+  outline: none !important;
+  outline-width: 0 !important;
+  outline-color: transparent !important;
+  border-color: inherit !important;
 }
 
 html,
