Updates to v3 page, including code syntax highlighting

--- a/lib/assets/css/marketing.css
+++ b/lib/assets/css/marketing.css
@@ -37,3 +37,14 @@
   box-shadow: var(--chakra-shadows-2xl);
   border-radius: 9999px;
 }
+
+
+/* v3 page */
+
+.feature-table {
+  overflow: hidden;
+  td {
+    font-weight: 500;
+    letter-spacing: -0.03rem;
+  }
+}
