--- a/lib/assets/css/popover.css
+++ b/lib/assets/css/popover.css
@@ -25,7 +25,6 @@
     0.9949 89.15%,
     1 100%
   );
-
   --ease-out: linear(
     0 0%,
     0.4322 6.7%,
@@ -45,11 +44,9 @@
     0.998 78.52%,
     1 100%
   );
-
   --sh: 48px;
   --ew: 280px;
   --eh: 324px;
-
   --speed: 0.3s;
   --starting: color-mix(in lch, canvas, canvasText 20%);
   --text: canvasText;
@@ -64,20 +61,14 @@
 .btn-popover {
   position: absolute;
   width: max-content;
-  height: var(--sh);
   border: 0;
   anchor-name: --control;
-  background: var(--starting);
   padding: 0;
-  background-color: var(--chakra-colors-background-base);
   height: 48px;
   padding-left: 16px;
   padding-right: 16px;
   font-weight: bold;
   font-size: 18px;
-}
-
-.btn-popover {
   color: var(--chakra-colors-font-dark);
   background: var(--chakra-colors-background-button-secondary);
   box-shadow: var(--chakra-shadows-md);
@@ -92,6 +83,7 @@
 .btn-popover:disabled {
   background: var(--chakra-colors-background-level3);
   border: 1px solid var(--chakra-colors-border-base);
+  /* stylelint-disable-next-line custom-property-pattern */
   color: var(--chakra-colors-grayText);
 }
 
@@ -99,7 +91,7 @@
   background: var(--chakra-colors-background-level3);
 }
 
-@media (max-width: 48em) {
+@media (width <= 48em) {
   .btn-popover {
     height: 40px;
     padding-left: 12px;
@@ -113,11 +105,8 @@
   inset-area: var(--inset, center);
   width: anchor-size(width);
   height: anchor-size(height);
-
   border-color: var(--chakra-colors-background-base);
-
   overflow: hidden;
-
   transition-property: display, overlay, height, width, border-radius, box-shadow, background-color,
     border-color, color;
   transition-behavior: allow-discrete;
@@ -146,7 +135,7 @@
 
 [popover]:-internal-popover-in-top-layer::backdrop {
   transition: all 0.3s ease-out;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgb(0 0 0 / 30%);
 }
 
 .content {
