--- a/lib/assets/css/global.css
+++ b/lib/assets/css/global.css
@@ -21,6 +21,30 @@ body {
   overscroll-behavior: none;
 }
 
+body::before {
+  background: url('/images/patterns/noise.svg');
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  z-index: -1;
+}
+
+body.chakra-ui-dark::before {
+  background: url('/images/background-noise.png');
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.02;
+  z-index: -1;
+}
+
 .hide-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -56,6 +80,7 @@ body {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  flex-grow: 1;
 }
 
 .fade-in-opacity {
