--- a/lib/assets/css/global.css
+++ b/lib/assets/css/global.css
@@ -19,6 +19,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior: none;
+  overflow-x: hidden;
 }
 
 /* body::before {
