--- a/lib/assets/css/marketing.css
+++ b/lib/assets/css/marketing.css
@@ -103,7 +103,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width >= 768px) {
   .syntax-highlighter {
     padding-left: 40px !important;
   }
