--- a/lib/assets/css/global.css
+++ b/lib/assets/css/global.css
@@ -148,11 +148,12 @@ div[id^='bkln'] {
 
 /* Featured pools animation */
 
-@keyframes rotatePath {
+@keyframes rotate-path {
   0% {
-    transform: rotate(0deg) translate(0, 0px) scale(0.5);
+    transform: rotate(0deg) translate(0) scale(0.5);
     opacity: 0;
   }
+
   100% {
     transform: rotate(360deg) translate(0, 0) scale(1);
     opacity: 1;
@@ -163,7 +164,7 @@ div[id^='bkln'] {
 .path2,
 .path3 {
   transform-origin: center;
-  animation: rotatePath 1s var(--ease-out-cubic) both 0.15s;
+  animation: rotate-path 1s var(--ease-out-cubic) both 0.15s;
   filter: drop-shadow(var(--chakra-shadows-2xl));
 }
 
@@ -176,10 +177,9 @@ div[id^='bkln'] {
 }
 
 .featured-pool-svg {
-  filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0 4px 6px rgb(0 0 0 / 20%));
 }
 
 .chakra-ui-dark .featured-pool-svg {
-  filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.4));
+  filter: drop-shadow(0 4px 6px rgb(0 0 0 / 40%));
 }
-
