--- a/lib/assets/css/global.css
+++ b/lib/assets/css/global.css
@@ -159,3 +159,11 @@ div[id^='bkln'] {
 .chakra-ui-dark .featured-pool-svg {
   filter: drop-shadow(0 4px 6px rgb(0 0 0 / 40%));
 }
+
+.anchor::before {
+  content: '';
+  display: block;
+  height: 75px;
+  margin-top: -75px;
+  visibility: hidden;
+}
